# figleaf

./: .gitignore  README.md  pyproject.toml
figleaf/: README.md  READMEmodels.txt  create_and_publish.py  create_models.py  create_models.readme  csv2json.py  example_article.json  get_figshare_info.py  ingest_researcher_metadata.py  ingest_researcher_metadata_figshare.py  json2models.py  models.py  private_article_schema.json  publish_existing.py  researcher_metadata.csv  test_spreadsheet.csv  test_spreadsheet.xlsx
figleaf/datacite/: create_DOI.py  datacite_models.py  ingest_researcher_metadata_datacite.py  researcher_metadata.json  researcher_metadata.xlsx
figleaf/example_data/: AA1121.swc  researcher_metadata.csv
figleaf/figshare/: AA1121.json  README.md  create_private_article.py  figshare_models.py  get_author_info.py  get_category_info.py  get_figshare_info.py  ingest_researcher_metadata_figshare.py  metadata2.json  my_articles.py  priv_article_models.py  publish_article.py  researcher_metadata.json  researcher_metadata.xlsx  researcher_metadata_figshare.csv  researcher_metadata_figshare.xlsx  schema_instructions.txt  ~$researcher_metadata.xlsx
figleaf/figshare/misc/: example_article_pretty.json  example_from_docs.json  figshare_models_from_docs.py  figshare_schema.json
tests/: test_figleaf.py
